--- a/inicio.html
+++ b/inicio.html
@@ -21,7 +21,13 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      </div>
+        <!-- USUARIO -->
+       <div id="info-user">
+         <p id="user" class="py-2 d-none d-md-inline-block"></p>
+       </div>
+
+
+
     </nav>
     <main role="main">
       <section class="jumbotron text-center">
