--- a/inicio.html
+++ b/inicio.html
@@ -23,7 +23,7 @@
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
         <!-- USUARIO -->
        <div id="info-user">
-         <p id="user" class="py-2 d-none d-md-inline-block"></p>
+         <p id="user" class="py-2 d-none d-md-inline-block" style="color: white;"></p>
        </div>
 
 
