--- a/product-info.html
+++ b/product-info.html
@@ -18,12 +18,21 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block" href="inicio.html">Inicio</a>
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+
+      <!-- USUARIO -->
+     <div id="info-user">
+      <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
+      <div id="links-drop" class="links-drop-contenido">
+        <a href="my-profile.html">Mi perfil</a>
+        <a href="index.html">Salir</a>
+      </div>
     </div>
+
   </nav>
   <div class="container p-5">
     <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
