--- a/products.html
+++ b/products.html
@@ -16,14 +16,23 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="inicio.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      </div>
-    </nav>
 
+        <!-- USUARIO -->
+       <div id="info-user">
+        <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
+        <div id="links-drop" class="links-drop-contenido">
+          <a href="my-profile.html">Mi perfil</a>
+          <a href="index.html">Salir</a>
+        </div>
+      </div>
+
+    </nav>
+<!-- DIV DONDE SE MUESTRA EL CONTENIDO -->
     <div class="list-group" id="cat-list-container">
     </div>
 
