entrega 3 pautas 1 y 2 completadas a lo minimo indispensable para pauta grupal

--- a/product-info.html
+++ b/product-info.html
@@ -34,14 +34,31 @@
     </div>
 
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 19/09/2021) y Entrega 4 (Fecha de entrega: 03/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+ 
+      <!-- DIV DONDE SE MUESTRA EL CONTENIDO -->
+      <div class="list-group" id="cat-list-container">
+      </div>
+
+
+      <div class="list-group">
+      <div class="list-group-item list-group-item-action">
+        <div class="row">
+            <div class="col">
+                <div class="d-flex w-100 justify-content-between">
+                    <div class="mb-1" id="caja-comentarios">
+                   
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
-  </div>
+
+      </div>
+
+
+
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
