--- a/product-info.html
+++ b/product-info.html
@@ -16,7 +16,7 @@
   <!-- LINK A LAS ESTRELLAS DE PUNTIACIÓN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- ESTILOS PERSONALES -->
-  <link href="css/info-product.css" rel="stylesheet">
+  <link href="css/product-info.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,17 +26,16 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
 
       <!-- USUARIO -->
-      <div id="info-user">
-        <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
-        <div id="links-drop" class="links-drop-contenido">
-          <a href="my-profile.html">Mi perfil</a>
-          <a href="index.html">Salir</a>
-        </div>
+     <div id="info-user">
+      <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
+      <div id="links-drop" class="links-drop-contenido">
+        <a href="my-profile.html">Mi perfil</a>
+        <a href="cart.html">Ver carrito</a>
+        <a href="index.html">Salir</a>
       </div>
-
+    </div>
   </nav>
 
   <!-- DIV DONDE SE MUESTRA EL CONTENIDO -->
@@ -61,14 +60,39 @@
 
   <!-- div para crear comentario -->
   <div class="form-floating">
-    <label for="floatingTextarea">Escribe un comentario</label>
-    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"
+    <label for="floatingTextarea">Publicar un comentario</label>
+    <textarea class="form-control" placeholder="Escribe aquí" id="floatingTextarea"
       style="height: 200px"></textarea>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
-    <span class="fa fa-star checked"></span>
+
+       <!-- rating de estrellas -->
+      <div class="star-rating">
+       
+        <input id="star-5" type="radio" name="rating" value="5"  />
+        <label for="star-5" title="5 stars">
+          <span class="active fa fa-star"></span>
+        </label>
+  
+        <input id="star-4" type="radio" name="rating" value="4"/>
+        <label for="star-4" title="4 stars">
+          <span class="active fa fa-star"></span>
+        </label>
+  
+        <input id="star-3" type="radio" name="rating" value="3"/>
+        <label for="star-3" title="3 stars">
+          <span class="active fa fa-star"></span>
+        </label>
+  
+        <input id="star-2" type="radio" name="rating" value="2" />
+        <label for="star-2" title="2 stars">
+          <span class="active fa fa-star"></span>
+        </label>
+  
+        <input id="star-1" type="radio" name="rating" value="1" checked/>
+        <label for="star-1" title="1 star">
+          <span class="active fa fa-star"></span>
+        </label>
+        
+      </div>
     <button class="btn btn-primary" id="publicar-comentario">Enviar</button>
   </div>
 
