--- a/product-info.html
+++ b/product-info.html
@@ -67,27 +67,27 @@
        <!-- rating de estrellas -->
       <div class="star-rating">
        
-        <input id="star-5" type="radio" name="rating" value="5"  />
+        <input id="star-5" onclick="getRating(5)" type="radio" name="rating" value="5"  />
         <label for="star-5" title="5 stars">
           <span class="active fa fa-star"></span>
         </label>
   
-        <input id="star-4" type="radio" name="rating" value="4"/>
+        <input id="star-4" onclick="getRating(4)" type="radio" name="rating" value="4"/>
         <label for="star-4" title="4 stars">
           <span class="active fa fa-star"></span>
         </label>
   
-        <input id="star-3" type="radio" name="rating" value="3"/>
+        <input id="star-3" onclick="getRating(3)" type="radio" name="rating" value="3"/>
         <label for="star-3" title="3 stars">
           <span class="active fa fa-star"></span>
         </label>
   
-        <input id="star-2" type="radio" name="rating" value="2" />
+        <input id="star-2" onclick="getRating(2)" type="radio" name="rating" value="2" />
         <label for="star-2" title="2 stars">
           <span class="active fa fa-star"></span>
         </label>
   
-        <input id="star-1" type="radio" name="rating" value="1" checked/>
+        <input id="star-1" onclick="getRating(1)" type="radio" name="rating" value="1" checked/>
         <label for="star-1" title="1 star">
           <span class="active fa fa-star"></span>
         </label>
