Inicio de pauta 1 entrega 4

--- a/product-info.html
+++ b/product-info.html
@@ -42,6 +42,22 @@
   <div class="list-group" id="cat-list-container">
   </div>
 
+    <!-- div de productos relacionados -->
+    <div class="list-group">
+      <div class="list-group-item list-group-item-action">
+        <div class="row">
+          <div class="col">
+            <div class="d-flex w-100 justify-content-between">
+              <div class="mb-1" id="productos-relacionados">
+  
+              </div>
+            </div>
+  
+          </div>
+        </div>
+      </div>
+    </div>
+
   <!-- div de comentarios -->
   <div class="list-group">
     <div class="list-group-item list-group-item-action">
