--- a/product-info.html
+++ b/product-info.html
@@ -45,16 +45,10 @@
     <!-- div de productos relacionados -->
     <div class="list-group">
       <div class="list-group-item list-group-item-action">
-        <div class="row">
-          <div class="col">
-            <div class="d-flex w-100 justify-content-between">
-              <div class="mb-1" id="productos-relacionados">
-  
+          <h4 class="text-center">Productos relacionados</h4>
+              <div class="row mb-1" id="productos-relacionados">
               </div>
-            </div>
-  
-          </div>
-        </div>
+    
       </div>
     </div>
 
