--- a/cart.html
+++ b/cart.html
@@ -42,36 +42,110 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
 
       <!-- USUARIO -->
-     <div id="info-user">
-      <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
-      <div id="links-drop" class="links-drop-contenido">
-        <a href="my-profile.html">Mi perfil</a>
-        <a href="cart.html">Ver carrito</a>
-        <a href="index.html">Salir</a>
+      <div id="info-user">
+        <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
+        <div id="links-drop" class="links-drop-contenido">
+          <a href="my-profile.html">Mi perfil</a>
+          <a href="cart.html">Ver carrito</a>
+          <a href="index.html">Salir</a>
+        </div>
+      </div>
+  </nav>
+
+
+  <div class="container p-5">
+
+
+    <div class="text-center p-4">
+      <h2>Carrito</h2>
+    </div>
+
+    <div class="row">
+
+
+      <!-- div donde se carga el carrito -->
+      <div class="col" id="carrito"></div>
+    </div>
+
+
+    <hr class="mb-4">
+    <h4 class="mb-3">Subtotal</h4>
+    <ul class="list-group mb-3">
+      <li class="list-group-item d-flex justify-content-between lh-condensed">
+        <div>
+          <h6 class="my-0">Precio de productos</h6>
+        </div>
+        <span class="text-muted" id="costoProductos">-</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between lh-condensed">
+        <div>
+          <h6 class="my-0">Costo de envío</h6>
+        </div>
+        <span class="text-muted" id="costoEnvio">-</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between">
+        <span>Total ($)</span>
+        <strong id="costoTotal">-</strong>
+      </li>
+    </ul>
+
+
+    <hr class="mb-4">
+    <h5 class="mb-3">Método de envío</h5>
+    <label for="direccion">Dirección</label>
+    <input type="text" class="form-control" id="direccion" placeholder="" value="">
+    <label for="pais">País</label>
+    <input type="text" class="form-control" id="pais" placeholder="" value="">
+    <div class="d-block my-3">
+      <div class="custom-control custom-radio">
+        <input id="envioPremium" name="metodoEnvio" type="radio" class="custom-control-input" checked="" required="">
+        <label class="custom-control-label" for="envioPremium">Premium (2-5 días) - Costo del 15% sobre el
+          subtotal.</label>
+      </div>
+      <div class="custom-control custom-radio">
+        <input id="envioExpress" name="metodoEnvio" type="radio" class="custom-control-input" required="">
+        <label class="custom-control-label" for="envioExpress">Express (5-8 días) - Costo del 7% sobre el
+          subtotal.</label>
+      </div>
+      <div class="custom-control custom-radio">
+        <input id="envioStandar" name="metodoEnvio" type="radio" class="custom-control-input" required="">
+        <label class="custom-control-label" for="envioStandar">Standard (12 a 15 días) - Costo del 5% sobre el
+          subtotal.</label>
+      </div>
+
+      <hr class="mb-4">
+      <h5 class="mb-3">Forma de pago</h5>
+      <div class="d-block my-3">
+        <div class="custom-control custom-radio">
+          <input id="pagoTarjetaCredito" name="metodoPago" type="radio" class="custom-control-input" checked=""
+            required="">
+          <label class="custom-control-label" for="pagoTarjetaCredito">Tarjeta de crédito</label>
+        </div>
+        <div class="custom-control custom-radio">
+          <input id="pagoTransferenciaBancaria" name="metodoPago" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="pagoTransferenciaBancaria">Transferencia bancaria</label>
+        </div>
+      </div>
+
+      <hr class="mb-4">
+      <button class="btn btn-primary btn-lg">Comprar</button>
+
+    </div>
+
+
+    <div id="spinner-wrapper">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
     </div>
-  </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 5 (Fecha de entrega: 17/10/2021) y Entrega 7 (Fecha de entrega: 14/11/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
-  </div>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/dropzone.js"></script>
-  <script src="js/init.js"></script>
-  <script src="js/cart.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/dropzone.js"></script>
+    <script src="js/init.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 
 </html>
