--- a/cart.html
+++ b/cart.html
@@ -59,35 +59,10 @@
     <div class="text-center p-4">
       <h2>Carrito</h2>
     </div>
-
-    <div class="row">
-
-
-      <!-- div donde se carga el carrito -->
-      <div class="col" id="carrito"></div>
-    </div>
-
-
-    <hr class="mb-4">
-    <h4 class="mb-3">Subtotal</h4>
-    <ul class="list-group mb-3">
-      <li class="list-group-item d-flex justify-content-between lh-condensed">
-        <div>
-          <h6 class="my-0">Precio de productos</h6>
-        </div>
-        <span class="text-muted" id="costoProductos">-</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between lh-condensed">
-        <div>
-          <h6 class="my-0">Costo de envío</h6>
-        </div>
-        <span class="text-muted" id="costoEnvio">-</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between">
-        <span>Total ($)</span>
-        <strong id="costoTotal">-</strong>
-      </li>
-    </ul>
+<button onclick="convertir('UYU', articulosCargados.length)" class="btn btn-secondary">Mostrar en UYU</button>
+<button onclick="convertir('USD', articulosCargados.length)" class="btn btn-secondary">Mostrar en USD</button>
+    <!-- div donde se carga el carrito -->
+    <div class="row" id="carrito"></div>
 
 
     <hr class="mb-4">
@@ -128,9 +103,32 @@
       </div>
 
       <hr class="mb-4">
+      <h4 class="mb-3">Compra</h4>
+      <ul class="list-group mb-3">
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Costo de productos</h6>
+          </div>
+          <span class="text-muted" id="costoProductos">-</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Costo de envío</h6>
+          </div>
+          <span class="text-muted" id="costoEnvio">-</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <span>Total ($)</span>
+          <strong id="costoTotal">-</strong>
+        </li>
+      </ul>
+
+      <hr class="mb-4">
       <button class="btn btn-primary btn-lg">Comprar</button>
 
     </div>
+
+    
 
 
     <div id="spinner-wrapper">
