--- a/products.html
+++ b/products.html
@@ -24,14 +24,14 @@
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
 
       <!-- USUARIO -->
-     <div id="info-user">
-      <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
-      <div id="links-drop" class="links-drop-contenido">
-        <a href="my-profile.html">Mi perfil</a>
-        <a href="cart.html">Ver carrito</a>
-        <a href="index.html">Salir</a>
+      <div id="info-user">
+        <button onclick="desplegable()" id="user" class="dropbtn py-2 d-none d-md-inline-block"></button>
+        <div id="links-drop" class="links-drop-contenido">
+          <a href="my-profile.html">Mi perfil</a>
+          <a href="cart.html">Ver carrito</a>
+          <a href="index.html">Salir</a>
+        </div>
       </div>
-    </div>
   </nav>
   <!-- FILTROS -->
   <div class="container">
@@ -79,11 +79,11 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <!-- DIV DONDE SE MUESTRA EL CONTENIDO -->
-      <div class="list-group" id="cat-list-container">
-      </div>
+
+    <!-- DIV DONDE SE MUESTRA EL CONTENIDO -->
+    <div class="row my-5" id="cat-list-container">
     </div>
+
   </div>
 
   <footer class="text-muted bg-light">
