--- a/my-profile.html
+++ b/my-profile.html
@@ -51,14 +51,49 @@
       </div>
     </div>
   </nav>
+
+
+
+
+
+<!-- CONTENEDOR DONDE SE GUARDAN LOS DATOS -->
+
   <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 6 (Fecha de entrega: 31/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+    <h5 class="mb-3">Perfil</h5>
+<div class="row">
+  <form class="col">
+    <div class="form-group">
+      <label for="nombreCompleto">Nombre completo</label>
+      <input type="text" class="form-control" id="nombreCompleto">
     </div>
+    <div class="form-group">
+      <label for="edad">Edad</label>
+      <input type="number" class="form-control" id="edad">
+    </div>
+    <div class="form-group">
+      <label for="mail">Email</label>
+      <input type="email" class="form-control" id="mail">
+    </div>
+    <div class="form-group">
+      <label for="telefono">Télefono</label>
+      <input type="text" class="form-control" id="telefono">
+    </div>
+    <button id="datos" class="btn btn-primary">Guardar cambios</button>
+  </form>
+  
+</div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
   <footer class="text-muted bg-light">
     <div class="container">
       <p>Este sitio forma parte de Desarrollo Web - JAP - 2020</p>
