--- a/cart.html
+++ b/cart.html
@@ -59,91 +59,152 @@
     <div class="text-center p-4">
       <h2>Carrito</h2>
     </div>
-<button onclick="convertir('UYU', articulosCargados.length)" class="btn btn-secondary">Mostrar en UYU</button>
-<button onclick="convertir('USD', articulosCargados.length)" class="btn btn-secondary">Mostrar en USD</button>
+    <button onclick="convertir('UYU', articulosCargados.length)" class="btn btn-secondary">Mostrar en UYU</button>
+    <button onclick="convertir('USD', articulosCargados.length)" class="btn btn-secondary">Mostrar en USD</button>
     <!-- div donde se carga el carrito -->
     <div class="row" id="carrito"></div>
 
 
     <hr class="mb-4">
     <h5 class="mb-3">Método de envío</h5>
-    <label for="direccion">Dirección</label>
-    <input type="text" class="form-control" id="direccion" placeholder="" value="">
-    <label for="pais">País</label>
-    <input type="text" class="form-control" id="pais" placeholder="" value="">
-    <div class="d-block my-3">
-      <div class="custom-control custom-radio">
-        <input id="envioPremium" name="metodoEnvio" type="radio" class="custom-control-input" checked="" required="">
-        <label class="custom-control-label" for="envioPremium">Premium (2-5 días) - Costo del 15% sobre el
-          subtotal.</label>
-      </div>
-      <div class="custom-control custom-radio">
-        <input id="envioExpress" name="metodoEnvio" type="radio" class="custom-control-input" required="">
-        <label class="custom-control-label" for="envioExpress">Express (5-8 días) - Costo del 7% sobre el
-          subtotal.</label>
-      </div>
-      <div class="custom-control custom-radio">
-        <input id="envioStandar" name="metodoEnvio" type="radio" class="custom-control-input" required="">
-        <label class="custom-control-label" for="envioStandar">Standard (12 a 15 días) - Costo del 5% sobre el
-          subtotal.</label>
-      </div>
-
-      <hr class="mb-4">
-      <h5 class="mb-3">Forma de pago</h5>
+    <form>
+      <label for="direccion">Dirección</label>
+      <input type="text" class="form-control" id="direccion" placeholder="" value="">
+      <label for="pais">País</label>
+      <input type="text" class="form-control" id="pais" placeholder="" value="">
       <div class="d-block my-3">
         <div class="custom-control custom-radio">
-          <input id="pagoTarjetaCredito" name="metodoPago" type="radio" class="custom-control-input" checked=""
-            required="">
-          <label class="custom-control-label" for="pagoTarjetaCredito">Tarjeta de crédito</label>
+          <input id="envioPremium" name="metodoEnvio" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="envioPremium">Premium (2-5 días) - Costo del 15% sobre el
+            subtotal.</label>
         </div>
         <div class="custom-control custom-radio">
-          <input id="pagoTransferenciaBancaria" name="metodoPago" type="radio" class="custom-control-input" required="">
-          <label class="custom-control-label" for="pagoTransferenciaBancaria">Transferencia bancaria</label>
+          <input id="envioExpress" name="metodoEnvio" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="envioExpress">Express (5-8 días) - Costo del 7% sobre el
+            subtotal.</label>
         </div>
-      </div>
+        <div class="custom-control custom-radio">
+          <input id="envioStandar" name="metodoEnvio" type="radio" class="custom-control-input" required="">
+          <label class="custom-control-label" for="envioStandar">Standard (12 a 15 días) - Costo del 5% sobre el
+            subtotal.</label>
+        </div>
 
-      <hr class="mb-4">
-      <h4 class="mb-3">Compra</h4>
-      <ul class="list-group mb-3">
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Costo de productos</h6>
+        <hr class="mb-4">
+        <h5 class="mb-3">Forma de pago</h5>
+        <div class="d-block my-3">
+
+          <div class="custom-control custom-radio">
+            <input id="pagoTarjetaCredito" name="metodoPago" type="radio" class="custom-control-input" required=""
+              data-toggle="modal" data-target="#modalPagoTarjetaCredito">
+            <label class="custom-control-label" for="pagoTarjetaCredito" style="cursor: pointer;">Tarjeta de
+              crédito</label>
           </div>
-          <span class="text-muted" id="costoProductos">-</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Costo de envío</h6>
+          <div class="custom-control custom-radio">
+            <input id="pagoTransferenciaBancaria" name="metodoPago" type="radio" class="custom-control-input"
+              required="" data-toggle="modal" data-target="#modalPagoTransferenciaBancaria">
+            <label class="custom-control-label" for="pagoTransferenciaBancaria" style="cursor: pointer;">Transferencia
+              bancaria</label>
           </div>
-          <span class="text-muted" id="costoEnvio">-</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-          <span>Total ($)</span>
-          <strong id="costoTotal">-</strong>
-        </li>
-      </ul>
 
-      <hr class="mb-4">
-      <button class="btn btn-primary btn-lg">Comprar</button>
+          <!-- MODAL PARA TARJETA DE CRÉDITO -->
+          <div class="modal fade" id="modalPagoTarjetaCredito" tabindex="-1"
+            aria-labelledby="modalPagoTarjetaCreditoLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="modalPagoTarjetaCreditoLabel">Tarjeta de crédito</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <input type="hidden" value="Pago con tarjeta de crédito">
+                  <label for="numeroTarjeta">Número de tarjeta</label>
+                  <input type="text" class="form-control" id="numeroTarjeta">
+                  <label for="vencimiento">vencimiento</label>
+                  <input type="date" class="form-control" id="vencimiento">
+                  <label for="cvv">CVV</label>
+                  <input type="text" class="form-control" id="cvv" placeholder="123">
 
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Deshacer</button>
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- MODAL PARA TRANSFERENCIA BANCARIA -->
+          <div class="modal fade" id="modalPagoTransferenciaBancaria" tabindex="-1"
+            aria-labelledby="modalPagoTransferenciaBancariaLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="modalPagoTransferenciaBancariaLabel">Transferencia bancaria</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  efhsufshdui
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Deshacer</button>
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+        </div>
+
+        <hr class="mb-4">
+        <h4 class="mb-3">Compra</h4>
+        <ul class="list-group mb-3">
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+              <h6 class="my-0">Costo de productos</h6>
+            </div>
+            <span class="text-muted" id="costoProductos">-</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+              <h6 class="my-0">Costo de envío</h6>
+            </div>
+            <span class="text-muted" id="costoEnvio">-</span>
+          </li>
+          <li class="list-group-item d-flex justify-content-between">
+            <span>Total ($)</span>
+            <strong id="costoTotal">-</strong>
+          </li>
+        </ul>
+
+        <hr class="mb-4">
+        <button type="submit" class="btn btn-primary btn-lg">Comprar</button>
+    </form>
+
+  </div>
+
+
+
+
+  <div id="spinner-wrapper">
+    <div class="lds-ring">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
-
-    
-
-
-    <div id="spinner-wrapper">
-      <div class="lds-ring">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-    </div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/dropzone.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/cart.js"></script>
+  </div>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/dropzone.js"></script>
+  <script src="js/init.js"></script>
+  <script src="js/cart.js"></script>
 </body>
 
 </html>
